k8s_trainning/ingress/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
      - image: nginx
        name: mynginx
---

apiVersion: v1
kind: Service
metadata:
  name: mynginx-cip
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 80
  selector:
    app: mynginx
